# tech-camp-rust-web-frameworks

./: .gitignore  README.md
benchmarks/: lorem.csv  main.py  mongodb_values.yaml  script.js  values.yaml  wine_small.csv
benchmarks/locust-helm/: values.yaml
benchmarks/locust-helm/templates/: cm-assets.yaml  cm-locustfile.yaml
frameworks/actix/: Cargo.toml  Dockerfile
frameworks/actix/src/: main.rs
frameworks/axum/: Cargo.toml  Dockerfile  config.toml
frameworks/axum/src/: config.rs  entries.rs  main.rs  payloads.rs  state.rs
frameworks/rocket/rocket-text-searcher/: Cargo.toml  Dockerfile
frameworks/rocket/rocket-text-searcher/src/: routes.rs
frameworks/rocket/text-searcher/: Cargo.toml  Rocket.toml
frameworks/rocket/text-searcher/src/: main.rs  routes.rs
helm/: Chart.yaml  values-actix.yaml  values-axum.yaml  values-rocket.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
jakob-sample/: .dockerignore  Cargo.toml  README.md  scripts.sh
jakob-sample/chart/templates/: _helpers.tpl  deployment.yaml
jakob-sample/ho-erfa-sample-main/: Dockerfile  Rocket.toml
jakob-sample/ho-erfa-sample-main/chart/: Chart.yaml  values.yaml
jakob-sample/ho-erfa-sample-main/chart/templates/: config.yaml  ingress.yaml  service.yaml
jakob-sample/ho-erfa-sample-main/perf-testing/: README.md
jakob-sample/ho-erfa-sample-main/src/: main.rs
jakob-sample/perf-testing/: Pipfile  locustfile.py
slides/: README.md  devbox.json  justfile  slides.html  slides.md  template.html
