[package]
name = "ho-erfa-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket_prometheus = "0.10.0-rc.3"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_redis", "mongodb"] }
bson = { version = "2.3.0", features = ["uuid-0_8"] }
uuid = { version = "1.1.2", features = [ "v4", "fast-rng"] }
redis = "0.21.5"
