[package]
name = "novelty"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
bson = "2.13.0"
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }

