[package]
name = "novelty"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
bson = "2.13.0"
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }

tracing = "0.1"
tracing-subscriber = "0.3.0"
